--- a/client/src/components/LoginController/style.css
+++ b/client/src/components/LoginController/style.css
@@ -27,13 +27,13 @@
 
 .controller {
   flex: 1;
+  font-family: Oxygen, sans-serif;
   text-align: center;
   height: 100%;
   line-height: 2;
   cursor: pointer;
 }
 
-/* Currently Selected Controller */
 .selected-controller {
   transition: border 0.5s ease-out;
   border-bottom: 2px solid #008ffb;
