--- a/client/src/pages/Login/style.css
+++ b/client/src/pages/Login/style.css
@@ -1,12 +1,6 @@
-html,
-body,
-#root {
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    /* background-color: lightgrey; */
-    background-color: #008ffb;
-    margin: 0;
+body {
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .wrapper {
@@ -21,6 +15,7 @@ body,
   z-index: 1;
   top: 0;
   overflow-x: hidden;
+  background-color: #008ffb;
 }
 
 #right-side {
