--- a/client/src/components/LoginController/style.css
+++ b/client/src/components/LoginController/style.css
@@ -1,6 +1,6 @@
 .root-container {
   width: 100%;
-  height: 100%;
+  height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,4 +47,5 @@
   box-shadow: 0px 0px 20px 0px rgba(15, 15, 15, 0.2);
   border-radius: 6px;
   padding: 24px;
+  margin-bottom: 20px;
 }
