--- a/client/src/pages/Login/style.css
+++ b/client/src/pages/Login/style.css
@@ -1,8 +1,10 @@
 body {
   margin: 0;
-  box-sizing: border-box;
+  /* box-sizing: border-box;
+  height: 50vh;
+  background-color: blue; */
 }
-
+/*
 .wrapper {
   margin: 0 auto;
 }
@@ -33,4 +35,6 @@ top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
 text-align: center;
-}
+} */
+
+
